[metadata]
name = Diffuser Tools
version = 0.0.2
author = Y. Natsume
author_email = None
description = This is a set of Python codes containing tools for generating images using stable diffusion models using the diffusers package.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/natsunoyuki/diffuser_tools
project_urls =
    Bug Tracker = https://github.com/natsunoyuki/diffuser_tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    transformers ~= 4.41.2
    accelerate ~= 0.32.1
    diffusers ~= 0.29.2
    huggingface_hub ~= 0.23.4
    omegaconf ~= 2.3.0
    compel ~= 2.0.2
    peft ~= 0.11.1
    yaml ~= 6.0.2
    pillow ~= 10.4.0

[options.packages.find]
where = src
